<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

<<<<<<< HEAD
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Transform"
        android:textStyle="bold" />

    <TextView
=======
    <!--TextView
>>>>>>> Alpha 1.0
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Zone" />

    <AutoCompleteTextView
        android:id="@+id/zone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
<<<<<<< HEAD
        android:text="AutoCompleteTextView" />
=======
        android:text="AutoCompleteTextView" /-->
>>>>>>> Alpha 1.0

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Coordinates" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/X"
        />

        <EditText
            android:id="@+id/txtX"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:ems="10"
            android:inputType="number"
            android:singleLine="true"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="48dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Y" />

        <EditText
            android:id="@+id/txtY"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:ems="10"
            android:inputType="number"
            android:singleLine="true"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="98dp" />

    </LinearLayout>

</LinearLayout>