<?xml version="1.0" encoding="utf-8"?>
<<<<<<< HEAD
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
=======
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
>>>>>>> Alpha 1.0
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
<<<<<<< HEAD
    android:background="@color/black_overlay"
    tools:context="be.khepri.adventure.ui.activities.EditGameObjectActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Create Game Object"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Add Behaviour"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:onClick="addBehaviour"
        />
=======
    android:orientation="vertical"
    android:background="@color/black_overlay"
    tools:context="be.khepri.adventure.ui.activities.EditGameObjectActivity">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titleCreateGameObject"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnAddBehaviour"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="addBehaviour"
                android:text="@string/addBehaviour"
                android:textAlignment="center"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btnSave"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="saveGameObject"
                android:text="@string/save" />
        </LinearLayout>
>>>>>>> Alpha 1.0

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:id="@+id/behaviours"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
            >

<<<<<<< HEAD
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</RelativeLayout>
=======
                <TextView
                    android:id="@+id/lblName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:labelFor="@+id/name"
                    android:text="@string/Name" />

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/lblDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:labelFor="@+id/description"
                    android:text="@string/Description" />

                <EditText
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textMultiLine"
                    android:minLines="3"
                    android:singleLine="false" />

            </LinearLayout>
        </ScrollView>
</LinearLayout>
>>>>>>> Alpha 1.0
